{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 37,
  "lineage": "b0902512-2a63-e9f2-e822-cfd72ebe6df8",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-006b102e8fa461ea9",
            "arn": "arn:aws:ec2:eu-north-1:136249279830:elastic-ip/eipalloc-006b102e8fa461ea9",
            "domain": "vpc",
            "id": "eipalloc-006b102e8fa461ea9",
            "network_border_group": "eu-north-1",
            "public_dns": "ec2-56-228-58-224.eu-north-1.compute.amazonaws.com",
            "public_ip": "56.228.58.224",
            "public_ipv4_pool": "amazon",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0286864172bfddcb6",
            "arn": "arn:aws:ec2:eu-north-1:136249279830:elastic-ip/eipalloc-0286864172bfddcb6",
            "domain": "vpc",
            "id": "eipalloc-0286864172bfddcb6",
            "network_border_group": "eu-north-1",
            "public_dns": "ec2-51-21-215-235.eu-north-1.compute.amazonaws.com",
            "public_ip": "51.21.215.235",
            "public_ipv4_pool": "amazon",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:136249279830:internet-gateway/igw-0c6ac5eee27a689aa",
            "id": "igw-0c6ac5eee27a689aa",
            "owner_id": "136249279830",
            "region": "eu-north-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-igw",
              "Region": "eu-north-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-igw",
              "Region": "eu-north-1"
            },
            "vpc_id": "vpc-06a69e6842995c7ec"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:136249279830:route-table/rtb-02154708db10d9813",
            "id": "rtb-02154708db10d9813",
            "owner_id": "136249279830",
            "propagating_vgws": [],
            "region": "eu-north-1",
            "route": [],
            "tags": {
              "Name": "dev-private-rt-1"
            },
            "tags_all": {
              "Name": "dev-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a69e6842995c7ec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:136249279830:route-table/rtb-0ff69c222818743e7",
            "id": "rtb-0ff69c222818743e7",
            "owner_id": "136249279830",
            "propagating_vgws": [],
            "region": "eu-north-1",
            "route": [],
            "tags": {
              "Name": "dev-private-rt-2"
            },
            "tags_all": {
              "Name": "dev-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a69e6842995c7ec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:136249279830:route-table/rtb-0af2a6873cbfd0a8a",
            "id": "rtb-0af2a6873cbfd0a8a",
            "owner_id": "136249279830",
            "propagating_vgws": [],
            "region": "eu-north-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c6ac5eee27a689aa",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-public-rt"
            },
            "tags_all": {
              "Name": "dev-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a69e6842995c7ec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cbec3189463ac2b5",
            "region": "eu-north-1",
            "route_table_id": "rtb-02154708db10d9813",
            "subnet_id": "subnet-07bf46a431eb8060d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.subnet_private",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-080f8e284f1a3e78d",
            "region": "eu-north-1",
            "route_table_id": "rtb-0ff69c222818743e7",
            "subnet_id": "subnet-0c24b2835a2516071"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.subnet_private",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-042ed785aa5291cd2",
            "region": "eu-north-1",
            "route_table_id": "rtb-0af2a6873cbfd0a8a",
            "subnet_id": "subnet-054125852146f8ef7"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.subnet_public",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0abd1aa59c6b62e8c",
            "region": "eu-north-1",
            "route_table_id": "rtb-0af2a6873cbfd0a8a",
            "subnet_id": "subnet-0fba6ce96edebd2e8"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.subnet_public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:136249279830:subnet/subnet-07bf46a431eb8060d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07bf46a431eb8060d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "136249279830",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-private-subnet-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-private-subnet-1"
            },
            "vpc_id": "vpc-06a69e6842995c7ec"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:136249279830:subnet/subnet-0c24b2835a2516071",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c24b2835a2516071",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "136249279830",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-private-subnet-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-private-subnet-2"
            },
            "vpc_id": "vpc-06a69e6842995c7ec"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:136249279830:subnet/subnet-054125852146f8ef7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-054125852146f8ef7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "136249279830",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-public-subnet-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-public-subnet-1"
            },
            "vpc_id": "vpc-06a69e6842995c7ec"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:136249279830:subnet/subnet-0fba6ce96edebd2e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fba6ce96edebd2e8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "136249279830",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-public-subnet-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-public-subnet-2"
            },
            "vpc_id": "vpc-06a69e6842995c7ec"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:136249279830:vpc/vpc-06a69e6842995c7ec",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0de93f4c423389f85",
            "default_route_table_id": "rtb-0cd491998eee52a5f",
            "default_security_group_id": "sg-08f42c4b9b41281ee",
            "dhcp_options_id": "dopt-0f85b8031fdeadb3f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06a69e6842995c7ec",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cd491998eee52a5f",
            "owner_id": "136249279830",
            "region": "eu-north-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc-eu-north-1",
              "Region": "eu-north-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc-eu-north-1",
              "Region": "eu-north-1"
            }
          }
        }
      ]
    }
  ]
}